production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SMCAPTAR_FRONT
  labels:
    app: SMCAPTAR_FRONT
spec:
  replicas: 2
  selector:
    matchLabels:
      app: SMCAPTAR_FRONT
  template:
    metadata:
      labels:
        app: SMCAPTAR_FRONT
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io.scheme: "http"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: SMCAPTAR_FRONT
          imagePullPolicy: Always
        image: ghcr.io/slaclab/smartcaptar-back:sha-78798d0
          resources:
            limits:
              memory: 512Mi
              cpu: "250m"
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: gh-secret
