production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartcaptar-back-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/whitelist-source-range: 134.79.0.0/16,172.16.0.0/12
  labels:
    name: smartcaptar-back-ingress
spec:
  rules:
  - host: "accel-webapp.slac.stanford.edu"
    http:
      paths:
      - pathType: Prefix
        path: /api/smart-captar(/|$)(.*)
        backend:
          service:
            name: smartcaptar-back-service
            port: 
              number: 1337
